[gd_scene load_steps=20 format=2]

[ext_resource path="res://stat_upgrade_panel.gd" type="Script" id=1]
[ext_resource path="res://assets/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://assets/Themes_v2/EXPLORATION/SlaveUpgradesPanel.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/Themes_v2/EmptyTexture.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/button_occupation.png" type="Texture" id=5]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/button_occupation_hover.png" type="Texture" id=6]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/button_occupation_pressed.png" type="Texture" id=7]
[ext_resource path="res://assets/Fonts_v2/PT_Sans/PT_24.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/Textures_v2/MANSION/Craft/Buttons/button_craftchoose.png" type="Texture" id=9]
[ext_resource path="res://assets/Textures_v2/MANSION/Craft/Buttons/button_craftchoose_hover.png" type="Texture" id=10]
[ext_resource path="res://assets/images/iconsitems/gold.png" type="Texture" id=11]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/PT_30_Label.tres" type="Theme" id=12]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/DecorButton.tres" type="Theme" id=13]
[ext_resource path="res://assets/Fonts_v2/PT_Sans/PT_20_Bold.tres" type="DynamicFont" id=14]
[ext_resource path="res://assets/Textures_v2/MANSION/Sex/Buttons/button_charlist_pressed.png" type="Texture" id=15]
[ext_resource path="res://assets/Textures_v2/MANSION/Sex/Buttons/button_charlist_hover.png" type="Texture" id=16]
[ext_resource path="res://assets/Textures_v2/MANSION/Sex/Buttons/button_charlist.png" type="Texture" id=17]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/VScrollBar.tres" type="Theme" id=18]
[ext_resource path="res://assets/images/portraits/daisy.png" type="Texture" id=19]

[node name="CharactersPanel" type="Panel"]
self_modulate = Color( 1, 1, 1, 0.54902 )
margin_right = 800.0
margin_bottom = 800.0
custom_styles/panel = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
self_modulate = Color( 0, 0, 0, 0.823529 )
show_behind_parent = true
margin_right = 800.0
margin_bottom = 800.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsPanel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.564706 )
margin_left = 414.0
margin_top = 87.0
margin_right = 793.0
margin_bottom = 791.0
custom_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatInfo" type="Label" parent="StatsPanel"]
margin_right = 379.0
margin_bottom = 24.0
theme = ExtResource( 12 )
text = "Stat Info"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatInfoNameValue" type="Label" parent="StatsPanel"]
margin_top = 421.0
margin_right = 379.0
margin_bottom = 445.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Stat Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatInfoCurrentValue" type="Label" parent="StatsPanel"]
margin_top = 461.0
margin_right = 379.0
margin_bottom = 501.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
text = "Current Value"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatInfoUpgradeValue" type="Label" parent="StatsPanel"]
visible = false
margin_left = 862.57
margin_top = 217.0
margin_right = 921.57
margin_bottom = 241.0
text = "Price"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmButton" type="Button" parent="StatsPanel"]
margin_left = 78.8632
margin_top = 630.0
margin_right = 286.863
margin_bottom = 694.0
theme = ExtResource( 13 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_disabled = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
text = "Upgrade"

[node name="Testing" type="Label" parent="StatsPanel"]
visible = false
margin_left = 280.0
margin_top = 552.0
margin_right = 365.0
margin_bottom = 576.0
text = "Testing"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsVBox" type="VBoxContainer" parent="StatsPanel"]
margin_left = 43.3193
margin_top = 40.0
margin_right = 343.319
margin_bottom = 91.0
rect_min_size = Vector2( 300, 51 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="StatsPanel/StatsVBox"]
visible = false
margin_right = 300.0
margin_bottom = 51.0
rect_min_size = Vector2( 0, 51 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
expand = true

[node name="StatName" type="Label" parent="StatsPanel/StatsVBox/Button"]
margin_right = 300.0
margin_bottom = 51.0
text = "Stat Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Materials" type="HBoxContainer" parent="StatsPanel"]
margin_top = 501.0
margin_right = 379.0
margin_bottom = 581.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="StatsPanel/Materials"]
visible = false
margin_left = 149.0
margin_right = 229.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 10 )
expand = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="StatsPanel/Materials/Button"]
margin_left = 2.0
margin_top = 3.0
margin_right = 76.0
margin_bottom = 77.0
rect_min_size = Vector2( 74, 74 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="StatsPanel/Materials/Button"]
margin_left = 2.0
margin_top = 50.0
margin_right = 77.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gold" type="TextureRect" parent="StatsPanel"]
margin_left = 113.0
margin_top = 579.0
margin_right = 164.0
margin_bottom = 630.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="StatsPanel/Gold"]
margin_left = 51.0
margin_top = 8.0
margin_right = 176.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
align = 1
valign = 1

[node name="Label" type="Label" parent="."]
margin_left = 9.0
margin_top = 87.0
margin_right = 407.0
margin_bottom = 111.0
theme = ExtResource( 12 )
text = "ChooseCharcter"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NothingToUpgrade" type="Label" parent="."]
visible = false
margin_left = 492.863
margin_top = 127.0
margin_right = 715.863
margin_bottom = 151.0
text = "Nothing to Upgrade"

[node name="CharList" type="Control" parent="."]
margin_left = 19.0
margin_top = 152.0
margin_right = 400.0
margin_bottom = 766.0
theme = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="CharList"]
margin_left = 25.0
margin_top = -1.0
margin_right = 325.0
margin_bottom = 614.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharactersVBox" type="VBoxContainer" parent="CharList/ScrollContainer"]
margin_right = 300.0
margin_bottom = 51.0
rect_min_size = Vector2( 300, 51 )

[node name="Button" type="TextureButton" parent="CharList/ScrollContainer/CharactersVBox"]
visible = false
margin_right = 340.0
margin_bottom = 52.0
rect_min_size = Vector2( 300, 51 )
theme = ExtResource( 2 )
toggle_mode = true
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 16 )

[node name="CharacterName" type="Label" parent="CharList/ScrollContainer/CharactersVBox/Button"]
margin_left = 54.0
margin_top = 6.0
margin_right = 336.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
text = "Character Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="CharList/ScrollContainer/CharactersVBox/Button"]
show_behind_parent = true
margin_left = 3.0
margin_top = 3.0
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 19 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar" type="VScrollBar" parent="CharList"]
visible = false
margin_right = 12.0
margin_bottom = 614.0
theme = ExtResource( 18 )
